refactored strategy pattern to only utilize static reader