@@ -35,14 +35,12 @@ import de.viadee.bpm.vPAV.BpmnScanner;
 import de.viadee.bpm.vPAV.FileScanner;
 import de.viadee.bpm.vPAV.RuntimeConfig;
 import de.viadee.bpm.vPAV.config.model.Rule;
-import de.viadee.bpm.vPAV.config.model.Setting;
 import de.viadee.bpm.vPAV.constants.ConfigConstants;
 import de.viadee.bpm.vPAV.processing.ElementGraphBuilder;
-import de.viadee.bpm.vPAV.processing.JavaReaderContext;
-import de.viadee.bpm.vPAV.processing.JavaReaderStatic;
 import de.viadee.bpm.vPAV.processing.ProcessVariablesScanner;
 import de.viadee.bpm.vPAV.processing.model.data.AnomalyContainer;
 import de.viadee.bpm.vPAV.processing.model.data.CheckerIssue;
+import de.viadee.bpm.vPAV.processing.model.graph.Graph;
 import de.viadee.bpm.vPAV.processing.model.graph.Path;
 import org.camunda.bpm.model.bpmn.Bpmn;
 import org.camunda.bpm.model.bpmn.BpmnModelInstance;
@@ -58,90 +56,83 @@ import java.util.*;
 
 public class ProcessVariablesModelCheckerStatic {
 
-    private static final String BASE_PATH = "src/test/resources/";
+	private static final String BASE_PATH = "src/test/resources/";
 
-    @BeforeClass
-    public static void setup() throws IOException {
-        final File file = new File(".");
-        final String currentPath = file.toURI().toURL().toString();
-        final URL classUrl = new URL(currentPath + "src/test/java");
-        final URL[] classUrls = { classUrl };
-        ClassLoader cl = new URLClassLoader(classUrls);
-        RuntimeConfig.getInstance().setClassLoader(cl);
-        RuntimeConfig.getInstance().getResource("en_US");
-        RuntimeConfig.getInstance().setTest(true);
-    }
+	@BeforeClass
+	public static void setup() throws IOException {
+		final File file = new File(".");
+		final String currentPath = file.toURI().toURL().toString();
+		final URL classUrl = new URL(currentPath + "src/test/java");
+		final URL[] classUrls = { classUrl };
+		ClassLoader cl = new URLClassLoader(classUrls);
+		RuntimeConfig.getInstance().setClassLoader(cl);
+		RuntimeConfig.getInstance().getResource("en_US");
+		RuntimeConfig.getInstance().setTest(true);
+	}
 
-    /**
-     * Case: there is an empty script reference
-     */
-    @Test
-    public void testProcessVariablesModelChecker() {
-        final Set<String> resources = new HashSet<>();
-        final ProcessVariablesScanner scanner = new ProcessVariablesScanner(resources);
-        final FileScanner fileScanner = new FileScanner(new HashMap<>(), ConfigConstants.TEST_JAVAPATH);
-        final String PATH = BASE_PATH + "ProcessVariablesModelCheckerTestStatic_GraphCreation.bpmn";
-        final File processDefinition = new File(PATH);
-        final JavaReaderContext jvc = new JavaReaderContext();
-        jvc.setJavaReadingStrategy(new JavaReaderStatic());
+	/**
+	 * Case: there is an empty script reference
+	 */
+	@Test
+	public void testProcessVariablesModelChecker() {
+		final Set<String> resources = new HashSet<>();
+		final ProcessVariablesScanner scanner = new ProcessVariablesScanner(resources);
+		final FileScanner fileScanner = new FileScanner(new HashMap<>(), ConfigConstants.TEST_JAVAPATH);
+		final String PATH = BASE_PATH + "ProcessVariablesModelCheckerTestStatic_GraphCreation.bpmn";
+		final File processDefinition = new File(PATH);
 
-        // parse bpmn model
-        BpmnModelInstance modelInstance = Bpmn.readModelFromFile(processDefinition);
+		// parse bpmn model
+		BpmnModelInstance modelInstance = Bpmn.readModelFromFile(processDefinition);
 
-        final ElementGraphBuilder graphBuilder = new ElementGraphBuilder(new BpmnScanner(PATH));
-        // create data flow graphs
-        final Collection<IGraph> graphCollection = graphBuilder.createProcessGraph(jvc, fileScanner, modelInstance,
-                processDefinition.getPath(), new ArrayList<>(), scanner);
+		final ElementGraphBuilder graphBuilder = new ElementGraphBuilder(new BpmnScanner(PATH));
+		// create data flow graphs
+		final Collection<Graph> graphCollection = graphBuilder.createProcessGraph(fileScanner, modelInstance,
+				processDefinition.getPath(), new ArrayList<>(), scanner);
 
-        // calculate invalid paths based on data flow graphs
-        final Map<AnomalyContainer, List<Path>> invalidPathMap = graphBuilder
-                .createInvalidPaths(graphCollection);
+		// calculate invalid paths based on data flow graphs
+		final Map<AnomalyContainer, List<Path>> invalidPathMap = graphBuilder.createInvalidPaths(graphCollection);
 
-        final Map<String, Setting> staticSetting = new HashMap<>();
-        staticSetting.put("UseStaticAnalysisBoolean",
-                new Setting("UseStaticAnalysisBoolean", "", null, null, false, "true"));
+		final Rule rule = new Rule("ProcessVariablesModelChecker", true, null, null, null, null);
+		ModelChecker checker = new ProcessVariablesModelChecker(rule, invalidPathMap);
 
-        final Rule rule = new Rule("ProcessVariablesModelChecker", true, null, staticSetting, null, null);
-        ModelChecker checker = new ProcessVariablesModelChecker(rule, invalidPathMap);
+		final Collection<CheckerIssue> issues = checker.check();
 
-        final Collection<CheckerIssue> issues = checker.check();
+		if (issues.size() == 0) {
+			Assert.fail("there should be generated an issue");
+		}
 
-        if (issues.size() == 0) {
-            Assert.fail("there should be generated an issue");
-        }
+		Iterator<CheckerIssue> iterator = issues.iterator();
+		final CheckerIssue issue1 = iterator.next();
+		Assert.assertEquals("Task_0oj9gln", issue1.getElementId());
+		Assert.assertEquals("DU", issue1.getAnomaly().toString());
+		final CheckerIssue issue2 = iterator.next();
+		Assert.assertEquals("Task_0546a8y", issue2.getElementId());
+		Assert.assertEquals("DU", issue2.getAnomaly().toString());
+		final CheckerIssue issue3 = iterator.next();
+		Assert.assertEquals("SequenceFlow_0bi6kaa", issue3.getElementId());
+		Assert.assertEquals("geloeschteVariable", issue3.getVariable());
+		Assert.assertEquals("DU", issue3.getAnomaly().toString());
+		final CheckerIssue issue4 = iterator.next();
+		Assert.assertEquals("SequenceFlow_0btqo3y", issue4.getElementId());
+		Assert.assertEquals("jepppa", issue4.getVariable());
+		Assert.assertEquals("DD", issue4.getAnomaly().toString());
+		final CheckerIssue issue5 = iterator.next();
+		Assert.assertEquals("ServiceTask_05g4a96", issue5.getElementId());
+		Assert.assertEquals("intHallo", issue5.getVariable().toString());
+		Assert.assertEquals("UR", issue5.getAnomaly().toString());
+		final CheckerIssue issue6 = iterator.next();
+		Assert.assertEquals("BusinessRuleTask_119jb6t", issue6.getElementId());
+		Assert.assertEquals("hallo2", issue6.getVariable());
+		Assert.assertEquals("UR", issue6.getAnomaly().toString());
+		final CheckerIssue issue7 = iterator.next();
+		Assert.assertEquals("Task_0546a8y", issue7.getElementId());
+		Assert.assertEquals("ProcessVariable2", issue7.getVariable());
+		Assert.assertEquals("UR", issue7.getAnomaly().toString());
 
-        Iterator<CheckerIssue> iterator = issues.iterator();
-        final CheckerIssue issue1 = iterator.next();
-        Assert.assertEquals("Task_0oj9gln", issue1.getElementId());
-        Assert.assertEquals("DU", issue1.getAnomaly().toString());
-        final CheckerIssue issue2 = iterator.next();
-        Assert.assertEquals("Task_0546a8y", issue2.getElementId());
-        Assert.assertEquals("DU", issue2.getAnomaly().toString());
-        final CheckerIssue issue3 = iterator.next();
-        Assert.assertEquals("SequenceFlow_0bi6kaa", issue3.getElementId());
-        Assert.assertEquals("geloeschteVariable", issue3.getVariable());
-        Assert.assertEquals("DU", issue3.getAnomaly().toString());
-        final CheckerIssue issue4 = iterator.next();
-        Assert.assertEquals("SequenceFlow_0btqo3y", issue4.getElementId());
-        Assert.assertEquals("jepppa", issue4.getVariable());
-        Assert.assertEquals("DD", issue4.getAnomaly().toString());
-        final CheckerIssue issue5 = iterator.next();
-        Assert.assertEquals("ServiceTask_05g4a96", issue5.getElementId());
-        Assert.assertEquals("intHallo", issue5.getVariable().toString());
-        Assert.assertEquals("UR", issue5.getAnomaly().toString());
-        final CheckerIssue issue6 = iterator.next();
-        Assert.assertEquals("BusinessRuleTask_119jb6t", issue6.getElementId());
-        Assert.assertEquals("hallo2", issue6.getVariable());
-        Assert.assertEquals("UR", issue6.getAnomaly().toString());
-        final CheckerIssue issue7 = iterator.next();
-        Assert.assertEquals("Task_0546a8y", issue7.getElementId());
-        Assert.assertEquals("ProcessVariable2", issue7.getVariable());
-        Assert.assertEquals("UR", issue7.getAnomaly().toString());
-
-        final CheckerIssue issue8 = iterator.next();
-        Assert.assertEquals("Task_0oj9gln", issue8.getElementId());
-        Assert.assertEquals("ProcessVariable2", issue8.getVariable());
-        Assert.assertEquals("UR", issue8.getAnomaly().toString());
-    }
+		final CheckerIssue issue8 = iterator.next();
+		Assert.assertEquals("Task_0oj9gln", issue8.getElementId());
+		Assert.assertEquals("ProcessVariable2", issue8.getVariable());
+		Assert.assertEquals("UR", issue8.getAnomaly().toString());
+	}
 
 }
